--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "next": "^12.3.0",
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-tsparticles": "^2.3.2",
+    "tsparticles": "^2.3.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
