--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "framer-motion": "^7.3.6",
     "next": "^12.3.0",
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-tsparticles": "^2.3.2",
+    "react-typist-component": "^1.0.5",
     "tsparticles": "^2.3.2"
   },
   "devDependencies": {
